--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 build
 data
+sample.txt
 .vscode
+WordCounter/.vscode/c_cpp_properties.json
+WordCounter/.vscode/c_cpp_properties.json
+WordCounter/cmakeconf.txt
+WordCounter/pseudo.cpp
+WordCounter/.vscode/c_cpp_properties.json
+WordCounter/.vscode/c_cpp_properties.json
