--- a/WordCounter/CMakeLists.txt
+++ b/WordCounter/CMakeLists.txt
@@ -1,9 +1,8 @@
-cmake_minimum_required(VERSION 3.0.0)
-project(WordCounter VERSION 0.1.0 LANGUAGES CXX) 
 SET (CMAKE_C_COMPILER_WORKS 1)
 SET (CMAKE_CXX_COMPILER_WORKS 1)
-
+cmake_minimum_required(VERSION 3.0.0)
+project(WordCounter VERSION 0.1.0 LANGUAGES CXX) 
+SET (CMAKE_CXX_STANDARD 17)
+find_package(Threads REQUIRED)
 add_executable(WordCounter main.cpp)
-
-set(CPACK_PROJECT_NAME ${PROJECT_NAME})
-set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
+target_link_libraries(WordCounter Threads::Threads)
