Queue upper bound

--- a/WordCounterThreadPool/example.conf
+++ b/WordCounterThreadPool/example.conf
@@ -1,5 +1,5 @@
 max_threads = 0; How many additional threads can the program use. The exact number of threads is calculated as: nthread = std::hardware_concurrency() + max_threads. Can be a negative number
-data_path = I:\; Path to the root directory starting from which files should be indexed.
+data_path = E:\; Path to the root directory starting from which files should be indexed.
 out_A_path = out\a.txt; Path to the result, sorted in lexocographical order.
 out_N_path = out\b.txt; Path to the result, sorted by the number of occurences.
-boundary = 10; Upper bound on the number of elements in the queue. Must be > 1.
+boundary = 10000; Upper bound on the number of elements in the queue. Must be > 1.
