--- a/WordCounterTBB/CMakeLists.txt
+++ b/WordCounterTBB/CMakeLists.txt
@@ -15,20 +15,6 @@ set_target_properties(worker_lib    PROPERTIES
     LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin"
 )
 
-# add_library(words_lib SHARED "${CMAKE_SOURCE_DIR}/inc/words.hpp" "${LIBRARY_DIR}/words.cpp")
-# set_target_properties(words_lib
-#     PROPERTIES
-#     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin"
-#     LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin"
-# )
-
-add_library(thread_pool_lib SHARED "${CMAKE_SOURCE_DIR}/inc/ThreadPool.hpp" "${LIBRARY_DIR}/ThreadPool.cpp")
-set_target_properties(thread_pool_lib
-    PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin"
-    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin"
-)
-
 find_package(Boost 1.66.0 COMPONENTS locale REQUIRED)
 set(Boost_USE_STATIC_LIBS        ON)  # only find static libs
 set(Boost_USE_DEBUG_LIBS         OFF) # ignore debug libs and
@@ -42,11 +28,20 @@ find_package(LibArchive)
 IF (NOT LibArchive_FOUND)
 # IF (UNIX)
     message("LibArchive not found in PATH. Installing a local copy of libarchive...")
-    add_subdirectory("${CMAKE_SOURCE_DIR}/import")
+    add_subdirectory("${CMAKE_SOURCE_DIR}/import/boost")
 # ELSEIF(WIN32)
 #     message("On non-UNIX systems, libarchive must be installed manually.")
 #     find_package(LibArchive REQUIRED)
+ENDIF()
 
+find_package(TBB)
+IF (NOT TBB_FOUND)
+    message("Intel-TBB not found in PATH. Installing a local copy of Intel-TBB...")
+    include("cmake/TBBGet.cmake")
+    tbb_get(TBB_ROOT tbb_root_dir CONFIG_DIR tbb_config)
+    set(TBB_FIND_RELEASE_ONLY TRUE)
+    find_package(TBB REQUIRED tbb)
+    # add_subdirectory("${CMAKE_SOURCE_DIR}/import/tbb")
 ENDIF()
 
 add_executable(WordCounter "${CMAKE_SOURCE_DIR}/src/main.cpp" "${CMAKE_SOURCE_DIR}/src/configs.cpp")
@@ -54,13 +49,18 @@ set_target_properties(WordCounter
 PROPERTIES
 RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin"
 )
-target_link_libraries(thread_pool_lib Threads::Threads Boost::locale)
+
+#REDUNDANT
 IF (UNIX)
-target_link_libraries(worker_lib archive thread_pool_lib Boost::locale)
+target_link_libraries(worker_lib archive Boost::locale)
 ELSEIF (WIN32)
-target_link_libraries(worker_lib LibArchive thread_pool_lib Boost::locale)
+target_link_libraries(worker_lib LibArchive Boost::locale)
 ENDIF()
 # target_link_libraries(words_lib Boost::locale)
 message("${Boost_LIBRARIES}")
-target_link_libraries(WordCounter Threads::Threads thread_pool_lib worker_lib)
+IF (UNIX)
+target_link_libraries(WordCounter Threads::Threads LibArchive TBB::tbb)
+ELSEIF (WIN32)
+target_link_libraries(WordCounter Threads::Threads libarchive TBB::tbb)
+ENDIF()
 # words_lib queue_lib
